--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "glut"
 version = "0.1.0"
 authors = ["Benjamin GROENEVELD <bgroeneveld@sifam.fr>"]
 edition = "2018"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,6 +12,9 @@ gl = { path = "lib/gl" }
 glutin = "0.26.0"
 takeable-option = "0.4"
 image = "0.21"
+
+[build-dependencies]
+walkdir = "2.3"
 
 [features]
 gl_debug = ["gl/debug"]
